# Vita3K

./: CMakeLists.txt
.github/workflows/: c-cpp.yml
vita3k/: CMakeLists.txt  main.cpp
vita3k/adhoc/: CMakeLists.txt
vita3k/adhoc/include/adhoc/: matchingContext.h  matchingTarget.h  state.h
vita3k/adhoc/src/: calloutSyncing.cpp  matchingContext.cpp  matchingTarget.cpp  state.cpp  target.cpp  threads.cpp
vita3k/app/: CMakeLists.txt
vita3k/app/src/: app_init.cpp
vita3k/audio/: CMakeLists.txt
vita3k/codec/: CMakeLists.txt
vita3k/compat/: CMakeLists.txt
vita3k/config/: CMakeLists.txt
vita3k/config/src/: config.cpp
vita3k/ctrl/: CMakeLists.txt
vita3k/ctrl/src/: ctrl.cpp  udp_client.cpp
vita3k/emuenv/src/: emuenv.cpp
vita3k/gui/src/: settings_dialog.cpp
vita3k/kernel/src/: sync_primitives.cpp  thread.cpp
vita3k/mem/src/: mem.cpp
vita3k/modules/: CMakeLists.txt
vita3k/modules/SceAppUtil/: SceAppUtil.cpp
vita3k/modules/SceCommonDialog/: SceCommonDialog.cpp
vita3k/modules/SceCtrl/: SceCtrl.cpp
vita3k/modules/SceDriverUser/: SceMotion.cpp
vita3k/modules/SceNet/: SceNet.cpp  SceNet.h
vita3k/modules/SceNetAdhocMatching/: SceNetAdhocMatching.cpp
vita3k/modules/SceNetCtl/: SceNetCtl.cpp
vita3k/modules/SceNpCommon/: SceNpCommon.cpp
vita3k/motion/: CMakeLists.txt
vita3k/motion/src/: motion.cpp  motion_input.cpp
vita3k/net/: CMakeLists.txt
vita3k/net/src/: net.cpp  p2psocket.cpp  posixsocket.cpp
vita3k/touch/: CMakeLists.txt
vita3k/util/: CMakeLists.txt
vita3k/util/src/: net_utils.cpp  tracy.cpp
(+14 files in other folders)
